--- a/Day 6/calculator.css
+++ b/Day 6/calculator.css
@@ -41,7 +41,7 @@
     align-items: center;
     height: 920px;
     width: 500px;
-    border-radius: 20px;
+    border-radius: 50px;
 }
 
 .zero{
@@ -64,7 +64,7 @@ input{
     height: 200px;
     font-size: 100px;
     border-radius: 30px;
-    word-wrap: normal;
+    word-wrap: break-word;
     word-break: break-all;
 }
 
